# Paint

./: .gitignore  README.md  paint.cabal  stack.yaml
src/: Backup.hs  Main.hs
