name:                paint
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/ismailmustafa/paint#readme
license:             BSD3
license-file:        LICENSE
author:              Ismail Mustafa
maintainer:          ismailmustafa@rocketmail.com
copyright:           2015 Ismail Mustafa
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable paint
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , Rasterific
                     , JuicyPixels
                     , random
                     , vector
                     , primitive
                     , colour
